--- a/stylesheet.css
+++ b/stylesheet.css
@@ -96,6 +96,7 @@ body {
     position: relative;
 }
 
+/*background*/
 .page-header-background {
     z-index: 1;
     height: 100%;
@@ -117,6 +118,13 @@ body {
     padding-bottom: 5%;
 }
 
+/*body of the page*/
 .page-info {
     font-size: 150%;
+}
+
+/*Video demos*/
+.page-video {
+    width: 75%;
+    height: 75%;
 }
